--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -83,19 +83,19 @@ nav a {
   width: 100%;
   height: 100%;
   border-radius: 100%;
-  animation: moveRight 2s linear;
+  animation: moveRight 2.5s linear;
 }
 
 .text h2 {
   font-size: 2.5rem;
   color: orange;
   margin: 0;
-  animation: moveBottom 2s linear;
+  animation: moveBottom 2.5s linear;
 }
 
 .text p {
   font-size: 2rem;
-  animation: moveLeft 2s linear;
+  animation: moveLeft 2.5s linear;
 }
 
 .text .details {
@@ -167,10 +167,12 @@ section#web-skills .skills .skill .icon {
 @keyframes moveLeft {
   0% {
     transform: translateX(300px);
+    opacity: 0;
   }
 
   50% {
     transform: translateX(-60px);
+    opacity: 0.5;
   }
 
   100% {
@@ -181,10 +183,12 @@ section#web-skills .skills .skill .icon {
 @keyframes moveBottom {
   0% {
     transform: translateY(-300px);
+    opacity: 0;
   }
 
   50% {
     transform: translateY(60px);
+    opacity: 0.5;
   }
 
   100% {
@@ -195,9 +199,11 @@ section#web-skills .skills .skill .icon {
 @keyframes moveRight {
   0% {
     transform: translateX(-200px);
+    opacity: 0;
   }
   50% {
     transform: translateX(100px);
+    opacity: 0.5;
   }
 
   100% {
