--- a/static/styles/resume.css
+++ b/static/styles/resume.css
@@ -5,7 +5,6 @@
 #resume-container {
   background-color: #eee;
   padding: 60px;
-  /* text-align: center; */
 }
 
 #resume-container .title {
@@ -41,7 +40,8 @@
 
 .prof-summary h2,
 .experience h2,
-.tech-proficiency h2 {
+.tech-proficiency h2,
+.education-resume h2 {
   color: var(--primary-color);
   border-bottom: 1px solid #000;
   text-transform: uppercase;
@@ -89,4 +89,29 @@
   padding: 10px 20px;
   border-radius: 5px;
   display: inline-block;
+}
+
+@media (max-width: 768px) {
+  #resume-container {
+    padding:30px 0 0 0;
+  }
+
+  #resume-container .title h1 {
+    margin-top: 0;
+  }
+
+  #resume {
+    width: 90%;
+    padding: 30px;
+  }
+
+  .skills-level {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width:425px) {
+  .resume-header {
+    flex-direction: column;
+  }
 }
