--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -5,11 +5,13 @@
 @import url('./projects.css');
 @import url('./contact.css');
 
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -44,6 +46,10 @@ nav a {
   color: #fff;
 }
 
+nav a:hover {
+  color: orange;
+}
+
 /* Banner */
 .banner {
   height: 500px;
@@ -62,7 +68,7 @@ nav a {
   background: rgba(0, 0, 0, 0.7);
   height: 500px;
   position: absolute;
-  top: 75px;
+  top: 70px;
   width: 100%;
 }
 
@@ -83,19 +89,19 @@ nav a {
   width: 100%;
   height: 100%;
   border-radius: 100%;
-  animation: moveRight 2.5s linear;
+  animation: moveRight 3s ease-in-out;
 }
 
 .text h2 {
   font-size: 2.5rem;
   color: orange;
   margin: 0;
-  animation: moveBottom 2.5s linear;
+  animation: moveBottom 3s ease-in-out;
 }
 
 .text p {
   font-size: 2rem;
-  animation: moveLeft 2.5s linear;
+  animation: moveLeft 3s ease-in-out;
 }
 
 .text .details {
@@ -131,6 +137,14 @@ section#web-skills .skills .skill {
   flex-direction: column;
   padding: 30px;
   min-width: 200px;
+  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+section#web-skills .skills .skill:hover {
+  transform: scale(1.1)
 }
 
 section#web-skills .skills .skill .icon {
@@ -217,6 +231,10 @@ section#web-skills .skills .skill .icon {
     height: 120px;
   }
 
+  nav ul {
+    padding-left: 0;
+  }
+
   .overlay {
     top: 125px;
     height: 650px;
@@ -234,5 +252,25 @@ section#web-skills .skills .skill .icon {
 
   .banner .text {
     text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  nav {
+    height: 170px;
+  }
+  .overlay {
+    top: 170px;
+  }
+  nav ul {
+    display: grid;
+    list-style: none;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 25px;
+  }
+
+  nav ul li {
+    margin-right: 0 !important;
   }
 }
