--- a/static/styles/resume.css
+++ b/static/styles/resume.css
@@ -89,6 +89,17 @@
   padding: 10px 20px;
   border-radius: 5px;
   display: inline-block;
+  transition: all 0.3s ease-in-out;
+}
+
+.download:hover {
+   transform: translateY(-5px);
+   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.download:active {
+  transform: translateY(0px);
+  box-shadow: unset;
 }
 
 @media (max-width: 768px) {
